Fix Alignment of Tooltip(left to center)

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -270,13 +270,14 @@
   display: block;
   font-size: 18px;
   font-weight: 600;
+  margin: auto;
   padding-bottom: 0;
   position: relative;
-
+  width: fit-content;
   p {
     margin-bottom: 0;
     max-height: 30px;
-    max-width: 300px;
+    max-width: 250px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
